--- a/restaurant.html
+++ b/restaurant.html
@@ -31,16 +31,18 @@
       <header>
          <!-- Beginning nav -->
         <nav>
-          <h1>
-            <a href="/">Restaurant Reviews</a>
-          </h1>
+          <ul> <!-- updated -->
+            <h1> 
+              <a href="/">Restaurant Reviews</a>
+            </h1>
+          </ul>
         </nav>
         <!-- End nav -->
       </header> 
-        <ul id="breadcrumb" >
+        <ul id="breadcrumb" > 
           <li><a href="/">Home</a></li>
         </ul>
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h2> <!-- updated -->
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
     
